-compatibility fix wp3.0 -> wp3.3
git-svn-id: https://plugins.svn.wordpress.org/wysija-newsletters/trunk@474598 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-campaigns.css
+++ b/css/admin-campaigns.css
@@ -1,1 +1,3 @@
 #icon-edit-news{background:url("../img/mail-big.png") no-repeat scroll 0 8px transparent}
+#TB_window {display:block;visibility: hidden;}
+
