--- a/css/admin-campaigns.css
+++ b/css/admin-campaigns.css
@@ -1,1 +1,1 @@
-#icon-edit-news{background:url("../img/mail-big.png") no-repeat scroll 0 8px transparent}#TB_window{display:block}
+#icon-edit-news{background:url("../img/mail-big.png") no-repeat scroll 0 8px transparent}#TB_window{display:block}.info-stats{cursor:pointer}.moredetails{display:none}.sending{background-color:#d5f0e6}
