--- a/tools/templates/editor/block_image.html
+++ b/tools/templates/editor/block_image.html
@@ -9,7 +9,7 @@
             {set var="#image_src" concat="#WYSIJA_EDITOR_IMG,transparent.png"}
             <span class="introduction">{$i18n.dropLogoHere}</span><img class="image_placeholder static active" src="{#image_src}" height="{#image.height}" width="{#image.width}" />
         {/if}
-        {if ! #image.static}<img class="image_placeholder" src="{#image.src}" height="{#image.height}" width="{#image.width}" />{/if}
+        {if ! #image.static}<img class="image_placeholder" src="{#image.src}" height="{#image.height}" width="{#image.width}" alt="{#image.alt}" />{/if}
         
         {if ! #image.static}
         <ul style="display: none;" class="wysija_tools">
@@ -20,8 +20,7 @@
             <li><a href="javascript:;" {if #image.static}style="display:none;"{/if} title="{$i18n.removeImageLink}" class="remove-link"><span></span></a></li>
             <li><a href="javascript:;" {if #image.static}style="display:none;"{/if} title="{$i18n.removeImage}" class="remove"><span></span></a></li>
         </ul>
-        {/if}
-        {if #image.url}
+        
         <div class="wysija_params">
             <input type="hidden" name="url" value="{#image.url}" />
             <input type="hidden" name="alt" value="{#image.alt}" />
