--- a/tools/templates/email/block_content.html
+++ b/tools/templates/email/block_content.html
@@ -4,7 +4,7 @@
 {if #text.value}
 <div style="clear:both; margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding: 0;">
     <table style="border-collapse: collapse; border-spacing: 0; margin: auto;" width="{#block_width|default:564}">
-        <tr colspan="2"><td style="clear:both; margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding: 0;" width="{#block_width|default:564}">
+        <tr><td colspan="2" style="clear:both; margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding: 0;" width="{#block_width|default:564}">
             {if #image.src}{include file="templates/email/block_image.html"}{/if}
             {include file="templates/email/block_text.html"}
             {if #image.src}<div style="page-break-after:always; clear:both;">&nbsp;</div>{/if}
