--- a/tools/templates/editor/block_auto-post_content.html
+++ b/tools/templates/editor/block_auto-post_content.html
@@ -1,4 +1,5 @@
 {if #posts}
+    {if $params.post_ids}<input type="hidden" name="post_ids" value="{$params.post_ids}" />{/if}
     {loop name="#posts"}
         {if $params.image_alignment == 'alternate' && $last_alignment}
             {if $last_alignment == 'left'}
