hotfix for bgcolor in gmail/sparrow
git-svn-id: https://plugins.svn.wordpress.org/wysija-newsletters/trunk@607493 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/tools/templates/email_v2/email_template.html
+++ b/tools/templates/email_v2/email_template.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body bgcolor="{#styles.html.background|color}" style="background:{#styles.html.background|color};color:{#styles.body.color|color}; font-family:'{#styles.body.family}';font-size:{#styles.body.size}px;" alink="{#styles.a.color|color}" link="{#styles.a.color|color}" text="{#styles.body.color|color}">
-    <span id="wysija_wrapper" style="margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; display:block;">
+    <span id="wysija_wrapper" style="margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; display:block;background:{#styles.html.background|color};">
         <table cellspacing="0" id="wysija_container" align="center" style="background:none; border:none; border-collapse:collapse; border-color:none; border-spacing:0; margin-bottom:0; margin-left:auto; margin-right:auto; margin-top:0; width:600px;" width="600" cellpadding="0">
             <tr>
                 <td style="margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0;">
