--- a/tools/templates/email_v2/block_content.html
+++ b/tools/templates/email_v2/block_content.html
@@ -21,7 +21,7 @@
                         <table align="{$image_alignment}" border="0" cellpadding="0" cellspacing="0" style="{if $background_color}border:1px solid {$background_color|color};{/if}border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; border-spacing: 0;">
                             <tr style="{if $background_color}background-color:{$background_color|color};{/if}">
                                 <td style="{if $background_color}background-color:{$background_color|color};{/if}mso-table-lspace:0;mso-table-rspace:0;clear:both;margin-bottom:0;margin-left:0;margin-right:0;margin-top:0;padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;" height="{$container_height}" width="{$container_width}" valign="top" align="{$image_alignment}">
-                                    {if #image.url}<a href="{#image.url|url_decode}" style="outline:0;border:0;display:block;height:{#image.height}px;width:{#image.width}px;">{/if}
+                                    {if #image.url}<a href="{#image.url}" style="outline:0;border:0;display:block;height:{#image.height}px;width:{#image.width}px;">{/if}
                                     <img src="{#image.src}" height="{#image.height}" alt="{#image.alt|url_decode|htmlentities}" width="{#image.width}" style="border:0;line-height:0.1em;margin:0;padding:0;" />
                                     {if #image.url}</a>{/if}
                                 </td>
