--- a/tools/templates/form/web/template.html
+++ b/tools/templates/form/web/template.html
@@ -9,5 +9,5 @@
         <input type="hidden" name="wysija[user_list][list_ids]" value="{#settings.lists|join:','}" />
     {/if}
     <input type="hidden" name="on_success" value="{#settings.on_success}" />
-    <input type="hidden" name="message_success" value="{#settings.success_message|replace_nl_br}" />
+    <input type="hidden" name="success_message" value="{#settings.success_message|base64_encode}" />
 {/if}
