--- a/tools/templates/form/web/widgets/input.html
+++ b/tools/templates/form/web/widgets/input.html
@@ -1,6 +1,6 @@
 <p>
     {if ! #params.label_within}<label for="">{#params.label}{if #params.required} <span class="wysija-required">*</span>{/if}</label>{/if}
-    <input type="text" name="wysija[user][{#field}]" class="wysija-input {$validation}" title="{#params.label}" {if #params.label_within}placeholder="{#params.label}"{/if} value="{if #value}{#value}{/if}" />
+    <input type="text" name="wysija[user][{#field}]" class="wysija-input {$validation}" title="{#params.label|html_value}" {if #params.label_within}placeholder="{#params.label|html_value}"{/if} value="{if #value}{#value|html_value}{/if}" />
     {if ! $preview}
     <span class="abs-req">
         <input type="text" name="wysija[user][abs][{#field}]" class="wysija-input validated[abs][{#field}]" value="" />
