--- a/tools/templates/form/web/widgets/text.html
+++ b/tools/templates/form/web/widgets/text.html
@@ -1,1 +1,1 @@
-{if #params.text}<p class="{#params.class|default:'wysija-text'}">{#params.text|base64_decode|nl2br}</p>{/if}
+{if #params.text}<p class="{#params.class|default:'wysija-text'}">{#params.text|html_value|nl2br}</p>{/if}
