hotfix for email rendering
git-svn-id: https://plugins.svn.wordpress.org/wysija-newsletters/tags/2.5@723584 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/tools/templates/email_v3/css.html
+++ b/tools/templates/email_v3/css.html
@@ -20,7 +20,7 @@ body, {#wysija_container} {
     unicode-bidi:embed;{/if}
 }
 table { border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; }
-table tr td { border-collapse:collapse; mso-line-height-rule:exactly; }
+table tr td { border-collapse:collapse; }
 div, p, a, li, td { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; }
 {#viewbrowser_container} p, {#viewbrowser_container} a {
     font-family: "{#viewbrowser.family}" !important;
