--- a/tools/templates/email_v3/block_divider.html
+++ b/tools/templates/email_v3/block_divider.html
@@ -1,9 +1,9 @@
 {if #src}
-<div style="{if $background_color}background-color:{$background_color|color};{/if}clear:both; margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding: 0; text-align:center;">
-    <table align="center" style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; border-spacing: 0; margin:auto;" width="600">
+<div style="{if $background_color}background-color:{$background_color|color};{/if}clear:both; margin-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; padding: 0;">
+    <table style="border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; border-spacing: 0; margin: auto;" width="600">
         <tr>
-            <td align="center" style="clear:both;margin-bottom:0;margin-left:0;margin-right:0;margin-top:0;padding-top:10px;padding-bottom:10px;padding-left:18px;padding-right:18px;" width="{#block_width|default:600}">
-                <div class="wysija-divider-container" style="width:600px;">
+            <td style="clear:both;margin-bottom:0;margin-left:0;margin-right:0;margin-top:0;padding-top:10px;padding-bottom:10px;padding-left:18px;padding-right:18px;" width="{#block_width|default:600}">
+                <div class="wysija-divider-container">
                     <img src="{#src}" height="{#height}" width="{#width}" alt="" style="border:0;" />
                 </div>
             </td>
